--- a/src/main/resources/templates/programme-confirmation/v1.0.0.html
+++ b/src/main/resources/templates/programme-confirmation/v1.0.0.html
@@ -33,8 +33,9 @@
     <p>
       Dr <th:block th:text="${not #strings.isEmpty(trainee.surname)} ? ${#strings.capitalize(trainee.surname)} : _">(surname missing)</th:block
       >'s salary would be in line with NHS employers contract/PayScale. Please click on link for information
-      <a href="https://gbr01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.nhsemployers.org%2Farticles%2Fpay-and-conditions-circulars-medical-and-dental-staff&data=05%7C02%7Cnazia.akhtar20%40nhs.net%7Cf84206bca0ca4460420208dcf26d51f5%7C37c354b285b047f5b22207b48d774ee3%7C0%7C0%7C638651798542008113%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C0%7C%7C%7C&sdata=MPahKNLVoyAvVlmERhOnTqIuD33%2FsmayfXXmPV%2BhbvU%3D&reserved=0">
-        Pay and conditions circulars for medical and dental staff | NHS Employers</a>.
+      <a
+        href="https://gbr01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.nhsemployers.org%2Farticles%2Fpay-and-conditions-circulars-medical-and-dental-staff&data=05%7C02%7Cnazia.akhtar20%40nhs.net%7Cf84206bca0ca4460420208dcf26d51f5%7C37c354b285b047f5b22207b48d774ee3%7C0%7C0%7C638651798542008113%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C0%7C%7C%7C&sdata=MPahKNLVoyAvVlmERhOnTqIuD33%2FsmayfXXmPV%2BhbvU%3D&reserved=0"
+        th:target="_blank">Pay and conditions circulars for medical and dental staff | NHS Employers</a>.
     </p>
     <p>If you require any further information, please do not hesitate to contact NHS England
       <th:block th:text="${not #strings.isEmpty(pm.managingDeanery)} ? ${pm.managingDeanery} : _"> Local Office</th:block> via <th:block th:switch="${contactHref}"
