--- a/src/main/resources/templates/layout/letter/v1.0.0.html
+++ b/src/main/resources/templates/layout/letter/v1.0.0.html
@@ -25,10 +25,10 @@
   <div class="greeting"><p>To whom it may concern,</p></div>
   <div class="subject"><p><strong>CONFIRMATION OF APPOINTMENT TO PAEDIATRICS FOR DR ANTHONY GILLIAM</strong></p></div>
   <section>
-    <p>I am writing to confirm that Dr Anthony Gilliam (GMC: 8999999) has been appointed to a Paediatrics
-      Training Programme with NHS England Health Education England East of England from 2 September
-      2024. Please note that NHS England Health Education England East of England is not an employing
-      body.</p>
+    <p>Please accept this as confirmation that Dr Anthony Gilliam (GMC: 8999999) has been appointed to a Paediatrics
+      Training Programme with NHS England - East of England from 2 September 2024. Please note that NHS England - East of England
+      is not an employing body.
+    </p>
     <p>
       Dr Gilliam is currently in a Training Programme between 2 September 2024 and 5 September 2028 and
       will be employed by a Trust. Continuation in the programme is subject to satisfactory progress at annual
@@ -36,21 +36,20 @@
       employing organisations.
     </p>
     <p>
-      Dr Gilliam's salary would be in line with NHS employers contract/PayScale. Please click on link for
-      information <a
+      Dr Gilliam's salary would be in line with NHS employers contract/PayScale. See <a
       href="https://www.nhsemployers.org/articles/pay-and-conditions-circulars-medical-and-dental-staff"
-      th:target="_blank">Pay and conditions circulars for medical and dental staff | NHS Employers</a>.
+      th:target="_blank">Pay and conditions circulars for medical and dental staff | NHS Employers</a> for more information.
     </p>
     <p>
-      If you require any further information, please do not hesitate to contact NHS England Health Education
-      England East of England via your local office.</p>
+      If you require any further information, please do not hesitate to contact NHS England - East of England via
+      your local office.</p>
   </section>
   <div class="sign-off">
     <p><span>Yours sincerely,</span></p>
     <div class="signature">
       <p>
-        <span><strong>NHS England</strong></span>
-        <span>Health Education England East of England</span>
+        <span>NHS England</span>
+        <span>East of England</span>
       </p>
     </div>
   </div>
