--- a/src/main/resources/static/css/print.css
+++ b/src/main/resources/static/css/print.css
@@ -33,35 +33,48 @@ body {
   padding: 10mm;
 }
 
+address {
+  font-style: normal;
+}
+
 h1 {
   font-size: inherit;
 }
 
+time {
+  white-space: nowrap;
+}
+
+header {
+  margin-bottom: 2.4rem;
+}
+
 header .logo {
   text-align: right;
+  margin-bottom: 9mm;
 }
 
 header .logo img {
   height: 17.5491mm;
   width: 23.3934mm;
-  margin-bottom: 9mm;
 }
 
-.sign-off span {
+header address.from {
+  text-align: right;
+  margin: 1.2rem 0 1.2rem 0;
+}
+
+header .sent {
+  text-align: right;
+  margin: 1.2rem 0 1.2rem 0;
+}
+
+footer {
+  margin-top: 2.4rem;
+}
+
+footer .sign-off span {
   display: block;
-}
-
-address {
-  font-style: normal;
-}
-
-address.from {
-  text-align: right;
-}
-
-.sent {
-  text-align: right;
-  padding: 5mm 0mm 5mm 0mm;
 }
 
 @media screen {
